re PR rtl-optimization/21138 (wrong code in sixtrack for -fmodulo-sched)

2005-06-01 Mostafa Hagog <mustafa@il.ibm.com>

	* modulo-sched.c (undo_generate_reg_moves ): Fix PR 21138.

From-SVN: r100426